[gd_scene load_steps=9 format=2]

[ext_resource path="res://PreScene.gd" type="Script" id=1]
[ext_resource path="res://gfx/quotes_3.png" type="Texture" id=2]
[ext_resource path="res://gfx/quotes_2.png" type="Texture" id=3]
[ext_resource path="res://gfx/quotes_4.png" type="Texture" id=4]
[ext_resource path="res://gfx/quotes_5.png" type="Texture" id=5]
[ext_resource path="res://gfx/quotes_1.png" type="Texture" id=6]
[ext_resource path="res://gfx/quotes_6.png" type="Texture" id=7]
[ext_resource path="res://audio/Dark Atmosphere to Synth.wav" type="AudioStream" id=8]

[node name="PreScene" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 332.0
margin_bottom = 194.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quote1" type="Sprite" parent="."]
visible = false
position = Vector2( 159.677, 90.25 )
texture = ExtResource( 6 )

[node name="Quote2" type="Sprite" parent="."]
visible = false
position = Vector2( 159.677, 90.25 )
texture = ExtResource( 3 )

[node name="Quote3" type="Sprite" parent="."]
visible = false
position = Vector2( 159.677, 90.25 )
texture = ExtResource( 2 )

[node name="Quote4" type="Sprite" parent="."]
visible = false
position = Vector2( 159.677, 90.25 )
texture = ExtResource( 4 )

[node name="Quote5" type="Sprite" parent="."]
visible = false
position = Vector2( 159.677, 90.25 )
texture = ExtResource( 5 )

[node name="Quote6" type="Sprite" parent="."]
visible = false
position = Vector2( 159.677, 90.25 )
texture = ExtResource( 7 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -6.059
autoplay = true

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
